# cloudbox

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  SUPERAPP_PLAN.md  cloudbox.service  docker-compose.prod.yml  docker-compose.yml  docker-setup.sh  run.sh  setup.sh  silo.service
.github/workflows/: docker.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/cloudbox/: MainActivity.kt
app/lib/: main.dart
app/lib/albums/providers/: albums_provider.dart
app/lib/albums/views/: album_detail_page.dart  albums_page.dart
app/lib/albums/widgets/: add_to_album_sheet.dart
app/lib/core/: router.dart  shell.dart  theme.dart
app/lib/core/api/: client.dart
app/lib/core/auth/: login_page.dart  qr_scan_page.dart
app/lib/core/models/: album.dart  file_entry.dart  photo.dart  photo_tag.dart
app/lib/core/providers/: auth_provider.dart  auto_upload_provider.dart
app/lib/core/services/: auto_upload_service.dart  share_receiver.dart
app/lib/faces/providers/: faces_provider.dart
app/lib/faces/views/: cluster_detail_page.dart  faces_page.dart
app/lib/files/providers/: files_provider.dart
app/lib/files/views/: files_page.dart
app/lib/map/providers/: map_provider.dart
app/lib/map/views/: map_page.dart
app/lib/photos/providers/: photos_provider.dart  selection_provider.dart
app/lib/photos/views/: device_photos_page.dart  gallery_page.dart  photo_detail_page.dart
app/lib/photos/widgets/: date_scroller.dart  selection_bar.dart
app/lib/search/providers/: search_provider.dart
app/lib/search/views/: search_page.dart
app/lib/settings/views/: settings_page.dart
app/lib/shared/widgets/: error_display.dart
app/lib/trash/providers/: trash_provider.dart
app/lib/trash/views/: trash_page.dart
app/test/: widget_test.dart
app/web/: index.html  manifest.json
crates/cloudbox-db/: Cargo.toml
crates/cloudbox-db/src/: albums.rs  faces.rs  files.rs  lib.rs  notes.rs  pairing.rs  photos.rs  shares.rs  stats.rs  tags.rs  users.rs
crates/cloudbox-media/: Cargo.toml
crates/cloudbox-media/src/: exif.rs  lib.rs  phash.rs  thumbs.rs  video.rs
crates/cloudbox-server/: Cargo.toml
crates/cloudbox-server/src/: auth.rs  config.rs  error.rs  main.rs  state.rs
crates/cloudbox-server/src/routes/: albums.rs  auth.rs  files.rs  mod.rs  notes.rs  pair.rs  photos.rs  stats.rs  trash.rs
crates/cloudbox-sync/: Cargo.toml
crates/cloudbox-sync/src/: lib.rs  s3.rs
crates/cloudbox-vision/: Cargo.toml
crates/cloudbox-vision/src/: classify.rs  clip.rs  faces.rs  imagenet_labels.rs  lib.rs  pipeline.rs
crates/cloudbox-vision/tests/: inspect_model.rs  real_image.rs  smoke_onnx.rs
crates/silo-db/: Cargo.toml
crates/silo-db/src/: files.rs  lib.rs  users.rs
crates/silo-media/: Cargo.toml
crates/silo-media/src/: lib.rs  thumbs.rs
crates/silo-server/: Cargo.toml
crates/silo-server/src/: auth.rs  config.rs  error.rs  main.rs
crates/silo-server/src/routes/: albums.rs  auth.rs  files.rs  notes.rs  pair.rs  photos.rs  stats.rs  trash.rs
crates/silo-sync/: Cargo.toml
crates/silo-sync/src/: local.rs  s3.rs
migrations/: 001_init.sql  002_photo_file_size.sql  003_tags.sql  004_media_type_video.sql  005_file_folders.sql  006_share_links.sql  007_favorites_and_trash.sql  008_albums.sql  009_extended_exif.sql  010_pairing_codes.sql  011_notes.sql
