[workspace]
resolver = "2"
members = [
    "crates/cloudbox-server",
    "crates/cloudbox-db",
    "crates/cloudbox-media",
    "crates/cloudbox-vision",
    "crates/cloudbox-sync",
]

[workspace.package]
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Web
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "limit"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "webp", "avif"] }
kamadak-exif = "0.5"

# Video
# ffmpeg called via tokio::process::Command

# Storage
aws-sdk-s3 = "1"
aws-config = "1"

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"

# Your crates — vision/ML pipeline
scry-learn = { path = "../esolearn/crates/scry-learn" }
scry-llm = { path = "../esolearn/crates/scry-llm" }
scry-gpu = { path = "../esolearn/crates/scry-gpu" }
