[package]
name = "cloudbox-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Database layer — Postgres via sqlx"

[dependencies]
cloudbox-media = { path = "../cloudbox-media" }
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
