[package]
name = "cloudbox-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Self-hosted cloud API server"

[[bin]]
name = "cloudbox"
path = "src/main.rs"

[[bin]]
name = "seed-user"
path = "src/bin/seed_user.rs"

[dependencies]
cloudbox-db = { path = "../cloudbox-db" }
cloudbox-media = { path = "../cloudbox-media" }
cloudbox-vision = { path = "../cloudbox-vision", default-features = false }
cloudbox-sync = { path = "../cloudbox-sync" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow = "1"
sqlx.workspace = true
