[package]
name = "cloudbox-vision"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "ML vision pipeline — CLIP embeddings, face detection/clustering via scry-*"

[features]
default = []
ml = ["scry-learn", "scry-vision/onnx"]

[dependencies]
cloudbox-db = { path = "../cloudbox-db" }
scry-learn = { workspace = true, optional = true }
scry-vision.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio.workspace = true
