[package]
name = "silo-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Database layer — Postgres via sqlx"

[dependencies]
argon2.workspace = true
silo-media = { path = "../silo-media" }
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
