[package]
name = "silo-media"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Image/video processing — thumbnails, EXIF, transcoding"

[dependencies]
image.workspace = true
kamadak-exif.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
webp = "0.3"
