[package]
name = "silo-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Self-hosted cloud API server"

[[bin]]
name = "silo"
path = "src/main.rs"

[[bin]]
name = "seed-user"
path = "src/bin/seed_user.rs"

[dependencies]
silo-db = { path = "../silo-db" }
silo-media = { path = "../silo-media" }
silo-sync = { path = "../silo-sync" }

axum = { workspace = true, features = ["macros"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow = "1"
rand.workspace = true
bytes = "1"
mime_guess = "2"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
sqlx.workspace = true
